manifests/ntfy/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    reloader.stakater.com/search: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  serviceName: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      containers:
      - name: ntfy
        image: binwiederhier/ntfy:v2.11.0
        args: ["serve"]
        ports:
        - containerPort: 80
          name: http
        - containerPort: 9090
          name: metrics
        volumeMounts:
        - name: config
          mountPath: "/etc/ntfy"
          readOnly: true
        - name: cache
          mountPath: "/var/cache/ntfy"
      volumes:
        - name: config
          configMap:
            name: ntfy
  volumeClaimTemplates:
  - metadata:
      name: cache
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app.kubernetes.io/name: ntfy
  ports:
  - port: 80
    targetPort: 80
