manifests/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  labels:
    app.kubernetes.io/name: ntfy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ntfy.cluster.fun
    secretName: ntfy-ingress
  rules:
    - host: ntfy.cluster.fun
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: ntfy
              port:
                number: 80
---
